manifest/simple-api-dev-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-dev-service
  namespace: test-dev
  labels:
    app: simple-api-dev-service
spec:
  selector:
    app: simple-api-dev-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
