manifest/simple-api-dev-network.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test-dev
  name: simple-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simple-api-dev-service
              port:
                number: 80
